[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0"]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ['docs/']
pretty = true
python_version = 3.10
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true

[tool.mypy-gevent]
ignore_missing_imports = true

[tool.mypy-mock]
ignore_missing_imports = true

[tool.mypy-pytest]
ignore_missing_imports = true

[tool.mypy-pytz]
ignore_missing_imports = true

[tool.mypy-volttron]
ignore_missing_imports = true

[tool.poetry]
authors = ["The VOLTTRON Development Team <volttron@pnnl.gov>"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: Apache Software License"
]
description = "Volttron BACnet Protocol Proxy implementation for the VOLTTRON platform. A BACnet Manager is provided which can launch proxy devices for communication with a BACnet network."
homepage = "https://github.com/eclipse-volttron/lib-protocol-proxy-bacnet"
keywords = []
license = "Apache License 2.0"
name = "protocol-proxy-bacnet"
packages = [{include = "protocol_proxy", from = "src"}]
readme = "README.md"
repository = "https://github.com/eclipse-volttron/lib-protocol-proxy-bacnet"
version = "2.0.0rc0"

[tool.poetry.dependencies]
bacpypes3 = ">=0.0.102"
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
mock = "^4.0.3"
mypy = "^0.942"
pre-commit = "^2.17.0"
pytest-cov = "^6.0.0"
toml = "^0.10.2"
yapf = "^0.32.0"

[tool.poetry.group.documentation.dependencies]
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.yapf]
based_on_style = "pep8"
column_limit = 99
spaces_before_comment = 4
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
  ".venv/**",
  ".pytest_cache/**",
  "dist/**",
  "docs/**"
]
